--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "react": "^16.8.1",
     "react-burger-menu": "^2.6.4",
     "react-dom": "^16.8.1",
-    "react-ga": "^2.5.7",
+    "react-ga": "^2.7.0",
+    "react-ga4": "^2.1.0",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
     "react-router": "^4.3.1",
